# jnigen

./: Cargo.toml
jnigen/: Cargo.toml
jnigen/src/: cargo-jnigen.rs  jni.rs  lib.rs  util.rs
jnigen_build/: Cargo.toml
jnigen_build/src/: lib.rs
jnigen_macro/: Cargo.toml
jnigen_macro/src/: cargo-jnigen.rs  derive_jni.rs  jni.rs  jni_raw_java.rs  lib.rs
jnigen_shared/: Cargo.toml
jnigen_shared/src/: helpers.rs  lib.rs
src/: lib.rs
test/: clean_all.sh  run_all.sh
test/class_implements/: Main.java
test/class_implements/mylib/src/: lib.rs
test/class_implements/other/: OtherInterface.java
test/class_method/: Main.java
test/class_method/mylib/: Cargo.toml
test/class_method/mylib/src/: lib.rs
test/find_lib_name/mylib/: Cargo.toml
test/jni_raw_java/mylib/src/: lib.rs
test/primitive_types/: Main.java  some_pkg_HelloWorld.h
test/primitive_types/mylib/: Cargo.toml
test/primitive_types/mylib/src/: lib.rs
test/simple/mylib/: Cargo.toml
test/simple_conversion/: Main.java
test/simple_conversion/mylib/src/: lib.rs
test/static_method/: .gitignore  Main.java  build.sh
test/static_method/mylib/: build.rs
test/static_method/mylib/src/: lib.rs
